# ralph-orchestrator

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  verify_fix.py
.github/: CODEOWNERS
.ralph/: prd.json  ralph.yml
.ralph-session/: session.json  task-status.json  task-status.sha256
.ralph-session/logs/: timeline.jsonl
changes/: CR-chat-20260126-173014.md
docs/: README.md  api.md  architecture-audit-T001.md  architecture-diagram.md  architecture.md  artifacts-quick-reference.md  how-to-create-tasks.md  how-to-customize-config.md  how-to-install.md  how-to-interpret-results.md  how-to-schedule-autopilot.md  how-to-setup-repository.md  how-to-troubleshoot.md  how-to-use-autopilot.md  how-to-use-cli.md  how-to-use-flow.md  manual-testing-checklist.md  migration-playbook-mongodb-rag-agent.md  testing-quick-reference.md
examples/: cr-import-example.md  prd-example-authentication.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/e2e/: playwright.config.ts
inventory/: SUMMARY.md  compound-product-assets.md  mongodb-rag-agent-assets.md
ralph_orchestrator/: __init__.py  autopilot.py  browser_use.py  chat.py  cli.py  config.py  exec.py  execution_log.py  flow.py  gates.py  guardrails.py  parallel.py  run.py  schedule.py  service_lifecycle.py  session.py  signals.py  timeline.py  ui.py  verify.py
ralph_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ralph_orchestrator/agents/: __init__.py  claude.py  prompts.py
ralph_orchestrator/research/: __init__.py  backend.py  coordinator.py  frontend.py  models.py  web.py
ralph_orchestrator/services/: __init__.py  config_service.py  git_service.py  orchestration_service.py  project_service.py  session_service.py
ralph_orchestrator/skills/: __init__.py  defaults.py  models.py  router.py
ralph_orchestrator/tasks/: __init__.py  prd.py
schemas/: autopilot.schema.json  cli.schema.json  cr-markdown.schema.json  prd.schema.json  ralph-config.schema.json  session.schema.json
server/: __init__.py  api.py  events.py  websocket.py
specs/: autopilot-module-design.md  canonical-artifacts.md  cli-contract.md  design-decisions.md  markdown-import-export.md  module-design.md  testing-strategy.md
templates/: AGENTS.md.template  pyproject.toml.starter
templates/.ralph/: prd.json.template  progress.txt.template  ralph.yml.fullstack  ralph.yml.minimal  ralph.yml.node  ralph.yml.python
tests/: __init__.py  conftest.py  pytest.ini
tests/e2e/: test_dashboard_flow.spec.ts  test_full_workflow_e2e.py
tests/fixtures/autopilot_min/: pyproject.toml
tests/fixtures/autopilot_min/.ralph/: prd.json  ralph.yml
tests/fixtures/autopilot_min/reports/: weekly-report.md
tests/fixtures/autopilot_min/src/: __init__.py  main.py
tests/fixtures/fullstack_min/: pyproject.toml
tests/fixtures/fullstack_min/.ralph/: prd.json  ralph.yml
tests/fixtures/fullstack_min/frontend/: package.json
tests/fixtures/fullstack_min/frontend/src/: App.tsx
tests/fixtures/fullstack_min/src/api/: main.py
tests/fixtures/fullstack_min/tests/: test_api.py
tests/fixtures/python_min/: pyproject.toml
tests/fixtures/python_min/.ralph/: prd.json  ralph.yml
tests/fixtures/python_min/src/: __init__.py  main.py
tests/fixtures/python_min/tests/: test_main.py
(+237 files in other folders)
