[project]
name = "fixture-fullstack-min"
version = "0.1.0"
description = "Minimal fullstack fixture for Ralph orchestrator testing"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
